--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 </head>
 <body>
     <h1>welcome to the bear cave.</h1>
-    <section class="wrap">
-    </section>
+    <div class="bear" id="bear-image">
+        <img src="imgs/vibin bear.png" alt="vibin bear">
+    </div>
+    <div class="wrap">
+        <div class="button" id="vibin">vibin'</div>
+        <div class="button" id="cozyin">cozyin'</div>
+        <div class="button" id="listenin">listenin'</div>
+        <div class="button" id="singin">singin'</div>
+        <div class="button" id="rollin">rollin'</div>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="js/scripts.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
