--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8>
     <title>Exercise 3</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -17,7 +17,7 @@
         <div class="button" id="singin">singin'</div>
         <div class="button" id="rollin">rollin'</div>
     </div>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
