--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Exercise 3</title>
+    <link rel="stylesheet" href="https://use.typekit.net/lkk5vhu.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
