removed class attribute

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>welcome to the bear cave.</h1>
-    <div class="bear" id="bear-image">
+    <div class="bear">
         <img src="imgs/vibin bear.png" alt="vibin bear">
     </div>
     <div class="wrap">
